--- a/Eventos/Eventos.csproj
+++ b/Eventos/Eventos.csproj
@@ -44,12 +44,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppEventos.cs" />
+    <Compile Include="Features\DesplegarEventos\Implementaciones\DesplegadorEventos.cs" />
+    <Compile Include="Features\ProcesarEventos\Definiciones\IProcesadorEventos.cs" />
+    <Compile Include="Features\ProcesarEventos\Modelos\EventoProcesado.cs" />
     <Compile Include="Excepciones\BadRequestException.cs" />
     <Compile Include="Excepciones\NotFoundedException.cs" />
+    <Compile Include="Features\ProcesarEventos\Implementaciones\ProcesadorEventos.cs" />
     <Compile Include="Features\RecuperarInformacion\Implementaciones\ControladorArchivo.cs" />
     <Compile Include="Features\RecuperarInformacion\Definiciones\IControladorArchivo.cs" />
     <Compile Include="Features\RecuperarInformacion\Modelos\EventoRecuperado.cs" />
     <Compile Include="Features\RecuperarInformacion\Definiciones\IRecuperadorRegistros.cs" />
+    <Compile Include="Features\DesplegarEventos\Definiciones\IDesplegadorEventos.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Features\RecuperarInformacion\Implementaciones\RecuperadorRegistros.cs" />
@@ -57,6 +62,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Features\DesplegarEventos\Modelos\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
